<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Androsnd</string>
    <string name="no_song">No song selected</string>
    <string name="shuffle_on">Shuffle ON</string>
    <string name="shuffle_off">Shuffle OFF</string>
    <string name="next_song">Next Song</string>
    <string name="next_folder">Next Folder</string>
    <string name="prev_song">Previous Song</string>
    <string name="prev_folder">Previous Folder</string>
    <string name="select_folder">Load Music Folder</string>
    <string name="scanning">Scanning…</string>
    <plurals name="scanning_songs_found">
        <item quantity="one">Scanning: %d song found</item>
        <item quantity="other">Scanning: %d songs found</item>
    </plurals>
    <string name="notification_channel_name">Music Playback</string>
    <string name="notification_channel_description">Music playback controls</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_play">Play</string>
    <string name="notification_action_previous">Previous</string>
    <string name="notification_action_next">Next</string>
    <string name="loading_files">Loading files…</string>
    <string name="files_loaded">Files loaded: %1$d/%2$d</string>
    <string name="settings">Settings</string>
    <string name="settings_app_volume">App Volume</string>
    <string name="settings_overlay_opacity">Now-Playing Popup Opacity</string>
    <string name="settings_overlay_size">Now-Playing Popup Size</string>
    <string name="overlay_demo_title">Now-Playing Popup</string>
    <string name="overlay_demo_artist">Drag me and I\'ll remember</string>
    <string name="overlay_demo_album">Pinch me and I will resize :)</string>
    <string name="accent_color">Accent Color</string>
    <string name="settings_show_demo_popup">Show Demo Popup</string>
    <string name="settings_show_overlay">Show Now Playing Overlay</string>

    <!-- Update checker -->
    <string name="update_check_button">Check for Updates</string>
    <string name="update_checking">Checking for updates&#8230;</string>
    <string name="update_dialog_title">Software Update</string>
    <string name="update_installed_version">Installed: %1$s</string>
    <string name="update_available_version">Available: %1$s</string>
    <string name="update_no_update">You are up to date.</string>
    <string name="update_available">A new version is available.</string>
    <string name="update_btn_update">Update</string>
    <string name="update_btn_cancel">Cancel</string>
    <string name="update_btn_close">Close</string>
<string name="update_downloading">Downloading update&#8230;</string>
    <string name="update_error">Could not check for updates: %1$s</string>
    <string name="update_install_unavailable">Please enable \"Install unknown apps\" for this app in Settings.</string>

    <!-- Internet radio -->
    <string name="mode_toggle">Switch music / radio</string>
    <string name="live_label">LIVE</string>
    <string name="settings_radio_header">Internet Radio</string>
    <string name="settings_add_stream">Add web stream</string>
    <string name="hint_station_name">Station name</string>
    <string name="hint_station_url">Stream URL (http://&#8230;)</string>
    <string name="settings_radio_buffer">Buffer before playback</string>
    <string name="toast_stream_added">Station added</string>
    <string name="toast_stream_invalid">Enter a name and a valid http(s) URL</string>

    <string-array name="radio_buffer_labels">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>40 seconds</item>
        <item>50 seconds</item>
        <item>60 seconds</item>
    </string-array>
</resources>
